syntax = "proto3";

package user;

option go_package = "./proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CheckUsersExist (CheckUsersExistRequest) returns (CheckUsersExistResponse);
}

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  int64 id = 1;
  string username = 2;
  string email = 3;
  string avatar_url = 4;
}

message CheckUsersExistRequest {
  repeated int64 user_ids = 1;
}

message CheckUsersExistResponse {
  bool exists = 1;
}