syntax = "proto3";

package user;

option go_package = "github.com/zhanserikAmangeldi/chat-service/proto/user";

service UserService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
  rpc CheckUserExists(CheckUserExistsRequest) returns (CheckUserExistsResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid      = 1;
  int64 user_id   = 2;
  string username = 3;
  string email    = 4;
  string error    = 5;
}

message GetUserInfoRequest {
  int64 user_id = 1;
}

message GetUserInfoResponse {
  int64 user_id   = 1;
  string username = 2;
  string email    = 3;
  bool online     = 4;
  string error    = 5;
}

message CheckUserExistsRequest {
  int64 user_id = 1;
}

message CheckUserExistsResponse {
  bool exists = 1;
  string username = 2;
}